# maz-anyt-platform-migration-agent

./: .env.example  .gitignore  LICENSE  README.md  RFC.md  final_state.json  pyproject.toml  requirements.txt  strategy.yaml  test_extract_from_adf_trigger.py  test_repo_cloner.py  test_repo_cloner_hopsflow.py  test_repo_cloner_simple.py  tree.md
inputs/samples/: manifest.yaml  manifest_template.yaml  normalized_ingestion_logistics_single_task.json  normalized_ingestion_sales_multi_task.json
src/: config.py
src/brewbridge/: config.py  main.py
src/brewbridge/core/: base_nodes.py  enums.py  graph_builder.py  state.py
src/brewbridge/domain/agents/parsers/: base_parser.py  factory.py  runner.py
src/brewbridge/domain/agents/parsers/implementations/: acl_parser.py  metadata_parser.py  notebook_parser.py  observability_parser.py  pipeline_parser.py  sync_parser.py  transformations_parser.py
src/brewbridge/domain/agents/translators/: base_translator.py  custom_translators.py
src/brewbridge/domain/extractor_strategies/: __init__.py  base_strategy.py  engineeringstore_input_builder.py  framework_3_0_strategy.py
src/brewbridge/domain/extractor_strategies/brewdat/: brewdat_3_0_strategy.py  signal_extractor_pipeline.py  signal_extractor_strategy.py  structures.py
src/brewbridge/domain/parsers/: runner.py
src/brewbridge/domain/services/: read_manifest_and_check_api.py  repo_cloner_service.py
src/brewbridge/domain/tools/: engineeringstore_input_builder.py  repo_cloner.py  repo_cloner_tool.py  set_up.py  setup_test.py  signal_extractor.py  template_creator.py  translator_tool.py  validation_error_parser.py  validator.py  yaml_parsers.py
src/brewbridge/domain/tools/extractor/3.0/: __init__.py  extract_artifacts_from_tables_tool.py  extractor_tool.py  read_manifest_and_check_api.py
src/brewbridge/domain/tools/extractor/v3/: extractor_tool.py
src/brewbridge/domain/translators/: base_parser.py  factory.py
src/brewbridge/domain/translators/strategies/hopsflow/: code_analyzer.py  transformations_parser.py
src/brewbridge/domain/translators/strategies/transformations_parser/: code_analyzer.py  transformations_parser.py  yaml_handler.py
src/brewbridge/infrastructure/: __init__.py  databricks_client.py  datafactory_client.py  engineeringstore_cli.py  github_client.py  logger.py
src/brewbridge/infrastructure/observability/: __init__.py  event_logger.py  mlflow_tracer.py
src/brewbridge/prompts/: schema_normalizer_prompt.py
src/brewbridge/utils/: constans.py  exceptions.py  manifest_yaml_utils.py  yaml_utils.py
tests/manual/: run_brewdat_signal_extractor.py  test_databricks_client.py  test_engineeringstore_cli_transformation_ingestion.py  test_github_client.py  test_strategy_3_0.py  test_transformations_parser.py  test_validator_tool_manual.py
tests/temp_output/: mx_dd02l_transformations.yaml  transformations_template.yaml
tests/unit/: test_databricks_client.py  test_engineeringstore_cli_validation.py  test_event_logger.py  test_mlflow_tracer.py  test_read_manifest_and_check_api.py  test_repo_cloner_tool.py  test_validation_error_parser.py  test_validator_tool.py
